# nonebot_plugin_pokesomeone

./: README.md  pyproject.toml
nonebot_plugin_pokesomeone/: __init__.py  config.py
